# patient

./: pyproject.toml  requirements.txt
src/: main.py
src/cache/: redis.py  redis_async.py
src/config/: settings.py
src/controllers/: compute.py  patient.py  request.py
src/db/: database.py
src/dependences/: dependences.py  singletons.py
src/models/: episode.py  patient.py  patient_id.py  request.py
src/routers/: compute.py  patient.py  request.py  status.py
src/schemas/: episode.py  patient.py  patient_id.py  request.py
tests/test_api/: conftest.py  test_api.py
