[tool.poetry]
name = "patient"
version = "0.1.0"
description = ""
authors = ["Vadim Lakhterman <vadim.l@labos.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
sqlalchemy = "^2.0.41"
pydantic-settings = "^2.10.1"
pyodbc = "^5.2.0"
redis = "^6.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
